// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`production tests pure js 1`] = `10`;

exports[`production tests pure js 2`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

// this is currently broken because of a bug in terser
// https://github.com/terser-js/terser/issues/353

/** @__PURE__ */
function foo() {
  return \\"hello world\\";
}

exports.foo = foo;
"
`;

exports[`production tests pure js 3`] = `
"// this is currently broken because of a bug in terser
// https://github.com/terser-js/terser/issues/353

/** @__PURE__ */
function foo() {
  return \\"hello world\\";
}

export { foo };
"
`;

exports[`production tests pure js 4`] = `
"\\"use strict\\";Object.defineProperty(exports,\\"__esModule\\",{value:!0}),exports.foo=function(){return\\"hello world\\"};
//# sourceMappingURL=pure.min.cjs.js.map
"
`;

exports[`production tests pure js 5`] = `
"function o(){return\\"hello world\\"}export{o as foo};
//# sourceMappingURL=pure.min.esm.js.map
"
`;

exports[`production tests pure js 6`] = `
"!function(e,n){\\"object\\"==typeof exports&&\\"undefined\\"!=typeof module?n(exports):\\"function\\"==typeof define&&define.amd?define([\\"exports\\"],n):n(((e=e||self).pure=e.pure||{},e.pure.min=e.pure.min||{},e.pure.min.umd=e.pure.min.umd||{},e.pure.min.umd.js={}))}(this,(function(e){\\"use strict\\";e.foo=function(){return\\"hello world\\"},Object.defineProperty(e,\\"__esModule\\",{value:!0})}));
//# sourceMappingURL=pure.min.umd.js.map
"
`;

exports[`production tests pure js 7`] = `
"(function (global, factory) {
  typeof exports === 'object' && typeof module !== 'undefined' ? factory(exports) :
  typeof define === 'function' && define.amd ? define(['exports'], factory) :
  (global = global || self, factory((global.pure = global.pure || {}, global.pure.umd = global.pure.umd || {}, global.pure.umd.js = {})));
}(this, (function (exports) { 'use strict';

  // this is currently broken because of a bug in terser
  // https://github.com/terser-js/terser/issues/353

  /** @__PURE__ */
  function foo() {
    return \\"hello world\\";
  }

  exports.foo = foo;

  Object.defineProperty(exports, '__esModule', { value: true });

})));
//# sourceMappingURL=pure.umd.js.map
"
`;
